@@ -1,3 +1,5 @@
+10/21/10 another attempt at BatteryCapacitorCircuit.get*At methods, still need specs
+10/21/10 add method for determining if a point is inside dielectric
 # 0.00.33 (45314) Oct 21, 2010
 10/21/10 dev version for discussion with Noah P.
 10/21/10 simplified field detector for Introduction tab (hide vector check boxes, show only Plate vector)
